[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hpqlib"
version = "0.1.0"
description = "C99 heap-priority-queue library with Python bindings"
readme = "README.md"
requires-python = ">=3.8"

[tool.cibuildwheel]
build = "cp38-* cp39-* cp310-* cp311-* cp312-* cp313-*"
test-command = "python -c \"import hpqlib; q=hpqlib.PriorityQueue(); a=[3]; b=[1]; h=q.push_handle(a); q.push(b); a[0]=0; q.decrease_key(h); assert q.pop() is a; c=[2]; h=q.push_handle(c); assert q.contains(c); assert q.remove(h) is c\""
